# B-Reconstruction-2-FPGA

./: .gitignore  README.md
C/: CMakeLists.txt
C/include/: batchnorm1d.h  batchnorm2d.h  conv1d.h  conv2d.h  edgeconv.h  network.h  particlenet.h  particlenet_complete.h  pf_features.h  pf_mask.h  pf_points.h  relu.h  topk_test.h
C/src/: batchnorm1d.cpp  batchnorm2d.cpp  conv1d.cpp  conv2d.cpp  edgeconv.cpp  edgeconv_test.cpp  generate_sofie.cpp  generate_sofie_cpp.d  generate_sofie_cpp_ACLiC_dict_rdict.pcm  main.c  main.cpp  network.h  particlenet.cpp  relu.cpp  topk_test.cpp  utils.cpp  utils.h
python/: add_mask_2_data.py  check_onnx.py  edge_conv_test.pt  edgeconv_test.py  fix_onnx_registeration.py  hepmc_2_root.py  onnx_2_c.py  partial_onnx2c.py  particlenet_complete_simplified.onnx  particlenet_fixed.onnx  patch_expand_shape_input.py  plot_mass.py  registered_model.onnx  registered_model_fixed.onnx  rrrrrrr.py  tensor_2_header.py  train.sh  weights_2_header.py
python/C-conversion/: convert.sh  generate_header_4_C_code.py  patch_onnx.py  tensor_2_header.py
python/C-conversion/onnx2c_test/: cleaned.onnx  edge_conv_test.pt  edgeconv_module_test.py  topk_module_test.py  topk_test.onnx  unsqueeze_module_test.py  unsqueeze_test.onnx
python/C-conversion/patched_ONNX/: particlenet_complete_cleaned.onnx
python/GNN-part/: add_mask_2_data.py  check_b_type.py  hepmc_2_root.py  train.sh
python/complete-1-B/config/: particlenet_pf.py
python/complete-2-B/config/: data-config.yaml  particlenet_pf.py  particlenet_pf_mask.py
python/complete-2-B/data/: part_mask_truth_test.npz
python/complete-2-B/training-log/: particlemask_drop_0.1.pt  particlenet_best_epoch_state.pt
python/gen_level_1B/training_log/: particlenet_drop_0.05.pt
python/gen_level_2B/config/: particlenet_pf.py  particlenet_pf_mask.py
python/gen_level_2B/training_log/: particlemask_2B_drop_0.1.pt  particlemask_complete.pt  particlemask_complete_with_eta_phi.pt  particlenet_2B_drop_0.1.pt  particlenet_complete_with_eta_phi.pt
python/incomplete-1-B/config/: data-config.yaml  particlenet_pf.py
python/incomplete-1-B/training-log/: particlenet_best_epoch_state.pt
python/onnx2c_test/: cleaned.onnx  edge_conv_test.pt  edgeconv_module_test.py  edgeconv_test.onnx  particlenet_module_test.py
python/runs/Aug31_01-36-11_Asusparticlenet/: events.out.tfevents.1756575371.Asus.3191232.0
python/runs/Aug31_01-37-17_Asusparticlenet/: events.out.tfevents.1756575437.Asus.3191560.0
python/runs/Aug31_01-40-55_Asusparticlenet/: events.out.tfevents.1756575655.Asus.3192364.0
python/runs/Aug31_01-42-16_Asusparticlenet/: events.out.tfevents.1756575736.Asus.3192757.0
python/runs/Aug31_01-43-41_Asusparticlenet/: events.out.tfevents.1756575821.Asus.3193128.0
python/runs/Aug31_13-19-00_Asusparticlenet/: events.out.tfevents.1756617540.Asus.11008.0
python/runs/Aug31_13-22-19_Asusparticlenet/: events.out.tfevents.1756617739.Asus.12700.0
python/runs/Aug31_13-25-13_Asusparticlenet/: events.out.tfevents.1756617913.Asus.14056.0
python/test/: model_folded.onnx  model_no_expand.onnx
(+180 files in other folders)
